# ein

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
.config/: nextest.toml
.github/workflows/: release.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  getting-started.md  installation.md  introduction.md
book/src/configuration/: README.md  providers.md  security.md
book/src/plugin-authoring/: README.md  building-installing.md  model-client-plugins.md  setup.md  tool-plugins.md
book/src/using-ein/: README.md  keyboard-shortcuts.md  sessions.md  slash-commands.md  tools.md
crates/ein/: Cargo.toml
crates/ein-agent/: Cargo.toml
crates/ein-agent/src/: agents.rs  errors.rs  lib.rs
crates/ein-agent/src/model_clients/: mod.rs
crates/ein-agent/src/tools/: mod.rs  native.rs
crates/ein-core/: Cargo.toml
crates/ein-core/src/: types.rs
crates/ein-proto/: Cargo.toml  build.rs
crates/ein-proto/proto/: ein.proto
crates/ein-proto/src/: lib.rs
crates/ein-server/: Cargo.toml
crates/ein-server/migrations/: 20260408224258_create_sessions.sql
crates/ein-server/src/: agent.rs  bindings.rs  grpc.rs  lib.rs  main.rs  model_client.rs  model_client_bindings.rs  model_client_syscalls.rs  persistence.rs  plugins.rs  syscalls.rs  tools.rs
crates/ein-server/src/model_client/: bindings.rs
crates/ein-tui/: Cargo.toml
crates/ein-tui/src/: app.rs  bootstrap.rs  config.rs  connection.rs  input.rs  lib.rs  main.rs  render.rs
crates/ein_agent/: Cargo.toml
crates/ein_agent/src/: agents.rs  errors.rs  lib.rs  telemetry.rs
crates/ein_agent/src/model_clients/: mod.rs
crates/ein_agent/src/tools/: native.rs
crates/ein_core/: Cargo.toml
crates/ein_core/src/: types.rs
crates/ein_http/src/: lib.rs
crates/ein_plugin/: Cargo.toml
crates/ein_plugin/src/: lib.rs  model_client.rs  tool.rs
crates/ein_proto/: Cargo.toml
crates/ein_proto/src/: lib.rs
crates/ein_wasm/: Cargo.toml
crates/ein_wasm/src/: lib.rs  model_client.rs  tools.rs
crates/ein_wasm/src/model_client/: syscalls.rs
crates/ein_wasm/src/tools/: bindings.rs
crates/ein_wasm/tests/: plugin_loading.rs
ein/: Cargo.toml
ein/src/: app.rs  bootstrap.rs  lib.rs  main.rs  render.rs
ein/tests/fixtures/: blockquotes.md  code.md  task_list.md  text.md  unordered_list.md
eind/: Cargo.toml
eind/src/: grpc.rs  lib.rs  main.rs  model_client.rs  persistence.rs  plugins.rs  tools.rs
eind/src/model_client/: bindings.rs  syscalls.rs
eind/src/tools/: bindings.rs  syscalls.rs
eind/tests/: session_store_injection.rs
notes/: ein-agent-mcp-fit-analysis.md  mcp-server-roadmap.md  vercel-mcp-incident-analysis.md
plugins/ein_anthropic/: Cargo.toml
plugins/ein_anthropic/src/: lib.rs
plugins/ein_bash/: Cargo.toml
plugins/ein_bash/src/: lib.rs
plugins/ein_edit/: Cargo.toml
plugins/ein_edit/src/: lib.rs
plugins/ein_ollama/: Cargo.toml
plugins/ein_ollama/src/: lib.rs
plugins/ein_openai/: Cargo.toml
plugins/ein_openai/src/: lib.rs
plugins/ein_openrouter/: Cargo.toml
plugins/ein_openrouter/src/: lib.rs
plugins/ein_read/: Cargo.toml
plugins/ein_read/src/: lib.rs
plugins/ein_write/: Cargo.toml
plugins/ein_write/src/: lib.rs
rfd/0001/: README.md
scripts/: build_install_plugins.sh
specs/: EIN-SERVER-CODE-REVIEW-v1.md  EIN-SERVER-CODE-REVIEW-v2.md  memory-system.md
src/: bindings.rs  main.rs  tools.rs
src/tools/: bash.rs  read.rs  write.rs
wit/host/: host.wit
wit/model_client/: model_client.wit  syscalls.wit
wit/plugin/: plugin.wit  syscalls.wit
