[workspace]
members = [
    "crates/ein-server",
    "crates/ein-tui",
    "crates/ein-proto",
    "packages/*",
]
default-members = [
    "crates/ein-server",
    "crates/ein-tui",
    "crates/ein-proto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mason Stallmo"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow             = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs"] }
tonic              = "0.12"
prost              = "0.13"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wit-bindgen        = "0.53.1"
