[workspace]
members = [
    "crates/ein",
    "crates/ein-server",
    "crates/ein-tui",
    "crates/ein-proto",
    "crates/ein-agent",
    "crates/ein-core",
    "packages/*",
]
default-members = [
    "crates/ein",
    "crates/ein-server",
    "crates/ein-tui",
    "crates/ein-proto",
    "crates/ein-agent",
    "crates/ein-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mason Stallmo"]
license = "Apache-2.0"
repository = "https://github.com/mstallmo/ein"
homepage = "https://github.com/mstallmo/ein"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
# Only distribute the meta-package; individual crates are excluded from releases.
members = ["crates/ein"]
# Allow manual edits to the generated workflow (we add a protoc install step).
allow-dirty = ["ci"]

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
anyhow             = "1"
futures            = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs"] }
tonic              = "0.12"
prost              = "0.13"
thiserror          = "2.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wit-bindgen        = "0.53.1"
