[package]
name = "eind"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "eind"
path = "src/lib.rs"

[[bin]]
name = "eind"
path = "src/main.rs"


[dependencies]
anyhow             = { workspace = true }
async-trait        = "0.1"
clap               = { version = "4.3.14", features = ["derive"] }
dirs               = "6.0.0"
ein-agent          = { path = "../crates/ein-agent" }
ein-proto          = { path = "../crates/ein-proto" }
ein_plugin         = { path = "../crates/ein_plugin" }
futures            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio              = { workspace = true }
tokio-stream       = "0.1"
tonic              = { workspace = true }
hyper              = { version = "1", default-features = false }
uuid               = { version = "1", features = ["v7"] }
wasmtime           = "42.0.1"
wasmtime-wasi      = "42.0.1"
wasmtime-wasi-http = "42.0.1"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
xz2 = { workspace = true }
tar = "0.4.45"
