[package]
name = "ein-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow             = { workspace = true }
async-trait        = "0.1"
ein-core           = { path = "../ein-core" }
futures            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
