[package]
name = "ein-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ein-server"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
async-trait        = "0.1"
clap               = { version = "4.3.14", features = ["derive"] }
dirs               = "6.0.0"
ein-proto          = { path = "../ein-proto" }
ein_model_client   = { path = "../../packages/ein_model_client" }
ein_tool           = { path = "../../packages/ein_tool" }
reqwest            = { version = "0.12", features = ["json"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tokio-stream       = "0.1"
tonic              = { workspace = true }
wasmtime           = "42.0.1"
wasmtime-wasi      = "42.0.1"
wasmtime-wasi-http = "42.0.1"
