[package]
name = "ein-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ein-server"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
async-trait        = "0.1"
clap               = { version = "4.3.14", features = ["derive"] }
dirs               = "6.0.0"
ein-proto          = { path = "../ein-proto" }
ein_plugin         = { path = "../../packages/ein_plugin" }
serde              = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio              = { workspace = true }
tokio-stream       = "0.1"
tonic              = { workspace = true }
hyper              = { version = "1", default-features = false }
uuid               = { version = "1", features = ["v7"] }
wasmtime           = "42.0.1"
wasmtime-wasi      = "42.0.1"
wasmtime-wasi-http = "42.0.1"
