[package]
name = "ein-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ein-tui"
path = "src/main.rs"

[dependencies]
anyhow       = { workspace = true }
crossterm    = { version = "0.28", features = ["event-stream"] }
notify       = "6"
dirs         = "6.0.0"
ein-proto    = { path = "../ein-proto" }
ratatui      = "0.29"
serde        = { workspace = true }
serde_json   = { workspace = true }
syntect      = "5"
tokio        = { workspace = true }
tokio-stream = "0.1"
tonic        = { workspace = true }
