[package]
name = "ein-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ein-tui"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { version = "4", features = ["derive"] }
crossterm          = { version = "0.28", features = ["event-stream"] }
notify             = "6"
dirs               = "6.0.0"
ein-proto          = { path = "../ein-proto" }
ratatui            = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
syntect            = "5"
tokio              = { workspace = true }
tokio-stream       = "0.1"
tonic              = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = "0.2"
tracing-subscriber = { workspace = true }
