[package]
name = "ein-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "ein_tui"
path = "src/lib.rs"

[[bin]]
name = "ein"
path = "src/main.rs"


[dependencies]
anyhow             = { workspace = true }
chrono             = { version = "0.4", features = ["clock"] }
clap               = { version = "4", features = ["derive"] }
crossterm          = { version = "0.28", features = ["event-stream"] }
notify             = "6"
dirs               = "6.0.0"
ein-proto          = { path = "../ein-proto" }
ratatui            = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
syntect            = "5"
tokio              = { workspace = true }
tokio-stream       = "0.1"
tonic              = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = "0.2"
tracing-subscriber = { workspace = true }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }
flate2 = "1.1.9"
tar = "0.4.45"
