[package]
name = "ein_plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow      = { workspace = true }
ein-core    = { path = "../ein-core" }
ein_http    = { path = "../ein_http" }
serde       = { workspace = true }
serde_json  = { workspace = true }
wit-bindgen = { workspace = true }
