[package]
name = "ein_bash"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.ein]
plugin_type = "tool"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
ein_plugin = { path = "../../crates/ein_plugin" }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen = { workspace = true}
