[package]
name = "ein_openrouter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.ein]
plugin_type = "model_client"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow           = { workspace = true }
ein_plugin = { path = "../../crates/ein_plugin" }
serde            = { workspace = true }
serde_json       = { workspace = true }
wit-bindgen      = { workspace = true }
